Update navigation and styles; improve About Us and Televisions pages

--- a/about.html
+++ b/about.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Energy consumption website</title>
     <meta charset="utf-8">
-    <meta name="description" content="Data Visualisation">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Hasya">
-    <link rel="stylesheet" href="style.css">
+<meta name="description" content="Data Visualisation">
+<meta name="keywords" content="HTML, CSS, JavaScript">
+<meta name="author" content="Hasya">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="Navbar">
-    <img onclick="goToHome()" src="PowerLogo.png" alt="Logo" style="height:50px;">
-    <button onclick="goToHome()">Home</button>
-    <button onclick="goToTELEVISIONS()">Televisions</button>
-    <div class="Navbar3">
-        <button onclick="goToAboutUs()">About Us</button>
-    </div>
-</div>
+    <div class="container">
+        <div class="Navbar">
+            <img onclick="goToHome()" src="PowerLogo.png" alt="Logo">
+            <button onclick="goToHome()">Home</button>
+            <button onclick="goToTelevisions()">Televisions</button>
+            <div class="Navbar3">
+                <button onclick="goToAboutUs()">About Us</button>
+            </div>
+        </div>
+
+        
 
 <footer>
     <div class="footer">
-        <h3>Some of the code was created by asking Bing AI for examples and clarification.</h3>
-        <H4>2025//SITIHASYA</H4>
+        
+        <h3>Some of the code was created with assistance from AI tools for examples and clarification.</h3>
+        <h4>2025 // SITI HASYA</h4>
+        <div id="date-time"></div>
     </div>
 </footer>
 <script src="script.js"></script>
-</body>
+    </body>
 </html>
