change some footer text

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <h1>Welcome to the Energy Consumption Website</h1>
         
         <div class="footer">
-            <h3>Some of the code was created with assistance from AI tools for examples and clarification.</h3>
-            <h4>2025 // SITI HASYA</h4>
+            <h3>@ SITI HASYA//2025</h3>
+            <h4>Some of the code was created with assistance from AI tools for examples and clarification.</h4>
+        
             <div id="date-time"></div>
         </div>
     </div>
