--- a/about.html
+++ b/about.html
@@ -24,8 +24,9 @@
 <footer>
     <div class="footer">
         
-        <h3>Some of the code was created with assistance from AI tools for examples and clarification.</h3>
-        <h4>2025 // SITI HASYA</h4>
+       <h3>@ SITI HASYA//2025</h3>
+            <h4>Some of the code was created with assistance from AI tools for examples and clarification.</h4>
+        
         <div id="date-time"></div>
     </div>
 </footer>
