--- a/televisions.html
+++ b/televisions.html
@@ -22,8 +22,9 @@
         <p>Household appliances and equipment account for an average of 25% of total residential energy consumption across Australia.<br>
             However, this proportion will vary by household depending on the climate, the types of appliances in your home, and the way they are used.</p>
         <div class="footer">
-            <h3>Some of the code was created with assistance from AI tools for examples and clarification.</h3>
-            <h4>2025 // SITI HASYA</h4>
+            <h3>@ SITI HASYA//2025</h3>
+            <h4>Some of the code was created with assistance from AI tools for examples and clarification.</h4>
+        
             <div id="date-time"></div>
         </div>
     </div>
